--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "./utils/variables";
+@import "./utils/mixins";
 @import "./base/titles";
 @import "./layouts/header-accueil";
 @import "./layouts/banniere-img";
