--- a/sass/layouts/_button.scss
+++ b/sass/layouts/_button.scss
@@ -4,14 +4,13 @@ button {
     color: white;
     font-weight: bolder;
     border-radius: 30px;
-    background: linear-gradient(#FF79DA, #9356DC);
+    background: $color-button;
     border: transparent;
     padding: 15px 20px;
     font-family: 'Shrikhand', sans-serif;
-    box-shadow: 5px 5px 10px rgb(231, 229, 229);
+    box-shadow: $box-shadow-size;
     &:hover{
-        box-shadow: 5px 5px 10px rgb(189, 189, 189);
-        /* créer une mixin avec 10% plus clair */
+        @include button-anim;
     }
 }
 
