--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./base/titles";
+@import "./layouts/spinner";
 @import "./layouts/header-accueil";
 @import "./layouts/banniere-img";
 @import "./layouts/localisation-form";
