--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,11 @@
 $prog-card-dur: 1200ms;
 $prog-card-delay: 0ms;
 
+/* Variables pour l'animation loading spinner */
+
+$prog-spin-dur: 2000ms;
+$prog-spin-delay: 0ms;
+
 /* Variables couleurs */
 
 $color-button: linear-gradient(#FF79DA, #9356DC);
