--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* Variables pour l'animation de l'arrivée des cartes sur les pages restaurants */
+/* Variables pour l'animation loading spinner */
 /* Variables couleurs */
 /* Variable box shadow */
 /* Mixin effet des boutons principaux */
@@ -17,6 +18,7 @@ h2 {
 
 h3 {
   font-size: 25px;
+  font-family: "Shrikhand", sans-serif;
 }
 
 h4 {
@@ -39,6 +41,30 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+/* Mise en place loading spinner */
+/* @keyframes spin {
+   0% {
+     transform: translate3d(-50%, -50%, 0) rotate(0deg);
+   }
+   100% {
+     transform: translate3d(-50%, -50%, 0) rotate(360deg);
+   }
+ }
+ .spinner::before {
+   animation: linear spin $prog-card-dur $prog-card-delay;
+   animation-play-state: inherit;
+   border: solid 5px #cfd0d1;
+   border-bottom-color: #1c87c9;
+   border-radius: 50%;
+   content: "";
+   height: 200px;
+   width: 200px;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate3d(-50%, -50%, 0);
+   will-change: transform;
+ } */
 /* Mise en page du header */
 .header-accueil {
   display: flex;
@@ -105,7 +131,6 @@ body {
   font-weight: bold;
   color: black;
   font-size: 14px;
-  font-family: "Shrikhand", sans-serif;
 }
 
 /* Mise en page 3ème partie du header */
@@ -135,7 +160,6 @@ button {
   background: linear-gradient(#FF79DA, #9356DC);
   border: transparent;
   padding: 15px 20px;
-  font-family: "Shrikhand", sans-serif;
   box-shadow: 5px 5px 10px rgb(231, 229, 229);
 }
 button:hover {
