--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,4 +14,6 @@ $color-button: linear-gradient(#FF79DA, #9356DC);
 
 /* Variable box shadow */
 
-$box-shadow-size: 5px 5px 10px rgb(231, 229, 229);
+$color-box-shadow: rgb(231, 229, 229);
+$box-shadow-size: 5px 5px 10px;
+
