--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h2 {
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 24px;
   font-family: "Shrikhand", sans-serif;
 }
 
@@ -42,29 +42,32 @@ body {
 }
 
 /* Mise en place loading spinner */
-/* @keyframes spin {
-   0% {
-     transform: translate3d(-50%, -50%, 0) rotate(0deg);
-   }
-   100% {
-     transform: translate3d(-50%, -50%, 0) rotate(360deg);
-   }
- }
- .spinner::before {
-   animation: linear spin $prog-card-dur $prog-card-delay;
-   animation-play-state: inherit;
-   border: solid 5px #cfd0d1;
-   border-bottom-color: #1c87c9;
-   border-radius: 50%;
-   content: "";
-   height: 200px;
-   width: 200px;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate3d(-50%, -50%, 0);
-   will-change: transform;
- } */
+@keyframes spin {
+  0% {
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+.spinner {
+  position: relative;
+}
+.spinner::before {
+  animation: linear spin 1200ms 0ms;
+  animation-play-state: inherit;
+  border: solid 5px #cfd0d1;
+  border-bottom-color: #1c87c9;
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  will-change: transform;
+}
+
 /* Mise en page du header */
 .header-accueil {
   display: flex;
@@ -161,9 +164,11 @@ button {
   border: transparent;
   padding: 15px 20px;
   box-shadow: 5px 5px 10px rgb(231, 229, 229);
+  cursor: pointer;
 }
 button:hover {
-  background-color: blue;
+  box-shadow: 5px 5px 10px #9e9595;
+  opacity: 0.8;
 }
 
 .button {
