--- a/sass/layouts/_spinner.scss
+++ b/sass/layouts/_spinner.scss
@@ -1,6 +1,6 @@
  /* Mise en place loading spinner */
 
- /* @keyframes spin {
+ @keyframes spin {
     0% {
       transform: translate3d(-50%, -50%, 0) rotate(0deg);
     }
@@ -8,13 +8,17 @@
       transform: translate3d(-50%, -50%, 0) rotate(360deg);
     }
   }
-  .spinner::before {
+
+  .spinner {
+    position: relative;
+
+    &::before {
+    
     animation: linear spin $prog-card-dur $prog-card-delay;
     animation-play-state: inherit;
     border: solid 5px #cfd0d1;
     border-bottom-color: #1c87c9;
     border-radius: 50%;
-    content: "";
     height: 200px;
     width: 200px;
     position: absolute;
@@ -22,4 +26,5 @@
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
     will-change: transform;
-  } */
+  } 
+}
