--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,6 @@
 /* Mixin effet des boutons principaux */
 
-@mixin button-anim {
-    background-color: blue;
-}
+@mixin button-anim ($color: $color-box-shadow) {
+    box-shadow: $box-shadow-size darken($color, 30%);
+    opacity: 0.8;
+} 
