--- a/sass/layouts/_spinner.scss
+++ b/sass/layouts/_spinner.scss
@@ -1,6 +1,6 @@
  /* Mise en place loading spinner */
 
- @keyframes spin {
+ /*@keyframes spin {
     0% {
       transform: translate3d(-50%, -50%, 0) rotate(0deg);
     }
@@ -14,7 +14,7 @@
 
     &::before {
     
-    animation: linear spin $prog-card-dur $prog-card-delay;
+    animation: linear spin $prog-spin-dur $prog-spin-delay;
     animation-play-state: inherit;
     border: solid 5px #cfd0d1;
     border-bottom-color: #1c87c9;
@@ -27,4 +27,33 @@
     transform: translate3d(-50%, -50%, 0);
     will-change: transform;
   } 
+} */
+
+.spinner {
+
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  animation: spin 2s linear $prog-spin-delay;
+  &:animation: > .le-reste-du-monde {
+    display: none;
+  }
+
+  
+
+ 
+}
+
+@keyframes spin {
+  0% { 
+    transform: rotate(0deg); 
+  }
+  100% { 
+    transform: rotate(360deg); 
+  }
 }
