--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,8 +5,9 @@ $prog-card-delay: 0ms;
 
 /* Variables pour l'animation loading spinner */
 
-$prog-spin-dur: 2000ms;
+$prog-spin-dur: 1500ms;
 $prog-spin-delay: 0ms;
+$body-delay: 10000ms;
 
 /* Variables couleurs */
 
