--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,500 @@
-/* Error: Expected identifier.
- *    ,
- * 43 |   &:animation: > .le-reste-du-monde{
- *    |               ^
- *    '
- *   sass\layouts\_spinner.scss 43:15  @import
- *   sass\main.scss 4:9                root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Expected identifier.\a    \2577 \a 43 \2502    &:animation: > .le-reste-du-monde{\d\a    \2502                ^\a    \2575 \a   sass\\layouts\\_spinner.scss 43:15  @import\a   sass\\main.scss 4:9                root stylesheet";
+@charset "UTF-8";
+/* Variables pour l'animation de l'arrivée des cartes sur les pages restaurants */
+/* Variables pour l'animation loading spinner */
+/* Variables couleurs */
+/* Variable box shadow */
+/* Mixin effet des boutons principaux */
+/* Paramètres généraux du site web Ohmyfood */
+h1 {
+  font-size: 21px;
+  font-weight: bolder;
+  font-family: "Roboto", sans-serif;
 }
+
+h2 {
+  font-size: 19px;
+  font-family: "Roboto", sans-serif;
+}
+
+h3 {
+  font-size: 24px;
+  font-family: "Shrikhand", sans-serif;
+}
+
+h4 {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 17px;
+}
+h4 span {
+  border-bottom: 3px solid #99E2D0;
+  padding-bottom: 5px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+/* Mise en place loading spinner */
+/*@keyframes spin {
+    0% {
+      transform: translate3d(-50%, -50%, 0) rotate(0deg);
+    }
+    100% {
+      transform: translate3d(-50%, -50%, 0) rotate(360deg);
+    }
+  }
+
+  .spinner {
+    position: relative;
+
+    &::before {
+
+    animation: linear spin $prog-spin-dur $prog-spin-delay;
+    animation-play-state: inherit;
+    border: solid 5px #cfd0d1;
+    border-bottom-color: #1c87c9;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
+    will-change: transform;
+  } 
+} */
+.spinner {
+  position: absolute;
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  top: 35%;
+  left: 20%;
+  animation: spin 1500ms linear 0ms;
+  transform: rotate(0);
+  opacity: 0;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+.le-reste-du-monde {
+  animation: body 10000ms;
+}
+
+@keyframes body {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+/* Mise en page du header */
+.header-accueil {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-resto {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 85%;
+}
+
+.header-arrow {
+  font-size: 25px;
+}
+.header-arrow a {
+  color: black;
+}
+
+.header-logo {
+  width: 45%;
+  padding: 12px;
+}
+
+.header-logo img {
+  width: 100%;
+  height: 100%;
+}
+
+/* Mise en page de la bannière d'image sur les pages des restaurants */
+.banniere-img img {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
+/* Mise en page du formulaire dans le header */
+.formulaire {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(231, 229, 229);
+  width: 100%;
+  box-shadow: inset 0em 0.1em 2px rgb(184, 184, 184);
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.formulaire-localisation {
+  padding-left: 30px;
+}
+.formulaire-recherche {
+  text-decoration: none;
+  background-color: rgb(231, 229, 229);
+  border: rgb(231, 229, 229);
+  padding-left: 15px;
+}
+
+::placeholder {
+  font-weight: bold;
+  color: black;
+  font-size: 14px;
+}
+
+/* Mise en page 3ème partie du header */
+.reservation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #fcf9f9;
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 50px;
+}
+.reservation p {
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+/* Design bouton dégradé */
+button {
+  color: white;
+  font-weight: bolder;
+  border-radius: 30px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border: transparent;
+  padding: 15px 20px;
+  box-shadow: 5px 5px 10px rgb(231, 229, 229);
+  cursor: pointer;
+}
+button:hover {
+  box-shadow: 5px 5px 10px #9e9595;
+  opacity: 0.8;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+}
+.button-com {
+  width: 48%;
+}
+
+/* Paramètres des box */
+.box {
+  display: grid;
+  align-items: center;
+  height: auto;
+  margin-bottom: 30px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px rgb(231, 229, 229);
+}
+
+.fonctionnement {
+  padding: 30px 20px;
+}
+.fonctionnement-orga {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.fonctionnement-box {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  background-color: #fcf9f9;
+  padding: 5px 0px;
+}
+.fonctionnement-box:hover {
+  background: #e7d2ff;
+}
+.fonctionnement-box:hover .fonctionnement-box-icone {
+  color: #9356dc;
+}
+.fonctionnement-box a {
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+.fonctionnement-box-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -15px;
+  width: 23px;
+  height: 23px;
+  min-width: 0px;
+  min-height: 0px;
+  border-radius: 50%;
+  color: white;
+  font-size: 15px;
+  background-color: #9356dc;
+}
+.fonctionnement-box-icone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  font-size: 20px;
+  color: grey;
+}
+.fonctionnement-box-txt {
+  font-size: 15px;
+  font-weight: bolder;
+  color: black;
+}
+
+.restaurants {
+  padding: 30px 20px;
+  background-color: #fcf9f9;
+  /* Organisation des vignettes */
+}
+.restaurants-orga {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.restaurants-orga-card {
+  width: 100%;
+  height: auto;
+  text-decoration: none;
+  color: black;
+}
+.restaurants-orga-card span {
+  position: absolute;
+  width: fit-content;
+  margin: 0.7rem;
+  background-color: #99E2D0;
+  color: green;
+  font-weight: bold;
+  padding: 6px 10px;
+  border-radius: 3px;
+}
+.restaurants .img-new {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.restaurants ul {
+  list-style-type: none;
+  width: 100%;
+  padding-left: 0;
+}
+.restaurants-orga-card-image {
+  height: 180px;
+  width: 100%;
+  border-radius: 15px 15px 0px 0px;
+  object-fit: cover;
+  object-position: 50% 130%;
+}
+.restaurants-orga-card-image1 {
+  height: 180px;
+  width: 100%;
+  border-radius: 15px 15px 0px 0px;
+  object-fit: cover;
+  object-position: 50% 110%;
+}
+.restaurants-orga-card-image2 {
+  height: 180px;
+  width: 100%;
+  border-radius: 15px 15px 0px 0px;
+  object-fit: cover;
+  object-position: 50% 60%;
+}
+.restaurants-orga-card-texte {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px 10px;
+}
+.restaurants-orga-card-texte h2 {
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+.restaurants-orga-card-texte p {
+  margin-top: 0;
+}
+
+@keyframes progress-bar {
+  0% {
+    transform: scaleX(0);
+  }
+  17% {
+    transform: scaleX(0.18);
+  }
+  24% {
+    transform: scaleX(0.4);
+  }
+  46% {
+    transform: scaleX(0.81);
+  }
+  85%, 100% {
+    opacity: 1;
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+.heart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  padding-right: 20px;
+}
+.heart:active > .progress__bar {
+  animation: progress-bar 1000ms;
+}
+
+/* Mise en page des menus */
+.menu {
+  border-radius: 35px 35px 0px 0px;
+  margin-top: -32px;
+  display: inline-block;
+  background-color: white;
+  padding: 10px 20px;
+  margin-bottom: 50px;
+}
+
+.menu-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px;
+}
+.card p {
+  margin: 4px;
+}
+.card-price {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+@keyframes entrees-animation {
+  0% {
+    transform: translateY(-100px) translateX(150px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.entrees-animation {
+  animation: entrees-animation 1200ms 0ms;
+}
+
+@keyframes plats-animation {
+  0% {
+    transform: translateY(-100px) translateX(150px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.plats-animation {
+  animation: plats-animation 1200ms 0ms;
+}
+
+@keyframes desserts-animation {
+  0% {
+    transform: translateY(-100px) translateX(150px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.desserts-animation {
+  animation: desserts-animation 1200ms 0ms;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 30px 20px;
+  background-color: rgb(58, 58, 58);
+  color: white;
+}
+.footer-logo {
+  width: 35%;
+  filter: invert(100%);
+  margin-bottom: 12px;
+}
+.footer-logo img {
+  width: 100%;
+  height: 100%;
+}
+.footer p {
+  font-size: 18px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  margin-top: 8px;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+.footer-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.footer-info span {
+  width: 5%;
+}
+.footer-info p {
+  margin-left: 15px;
+}
+
+/*# sourceMappingURL=style.css.map */
