--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -20,17 +20,26 @@ h4 {
     text-transform: uppercase;
     font-weight: normal;
     font-size: 17px;
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
     
-    & span {
-        border-bottom: 3px solid #99E2D0;
-        padding-bottom: 5px;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 25px;
+        left: 0;
+        height: 3px;
+        width: 45px;
+        background-color: #99E2D0;
     }
 }
 
-.bold {
-    font-weight: bold;
+h5 {
+    font-size: 16px;
+    margin: 5px;
 }
-
 body {
     margin: 0;
     padding: 0;
