--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -21,8 +21,6 @@ h4 {
     font-weight: normal;
     font-size: 17px;
     position: relative;
-    overflow: hidden;
-    text-overflow: ellipsis;
     
 
     &::after {
@@ -37,9 +35,13 @@ h4 {
 }
 
 h5 {
-    font-size: 16px;
-    margin: 5px;
+    font-size: 17px;
+    margin: 0;
+    margin-left: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
 body {
     margin: 0;
     padding: 0;
