--- a/sass/layouts/_spinner.scss
+++ b/sass/layouts/_spinner.scss
@@ -2,12 +2,15 @@
 
 .spinner {
   position: absolute;
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+  border: 16px solid #0042A4;
   border-radius: 50%;
+  border-top: 16px solid #9356DC;
+  border-right: 16px solid #FF79DA;
+  border-bottom: 16px solid #96BFF9;
+  border-left: 16px solid #99E2D0;
   width: 200px;
   height: 200px;
-  top: 35%;
+  top: 30%;
   left: 20%;
   animation: spin $prog-spin-dur linear $prog-spin-delay;
   transform: rotate(0);
@@ -19,6 +22,7 @@
     transform: rotate(0deg); 
     opacity: 1;
   }
+ 
   100% { 
     transform: rotate(360deg); 
     opacity: 0;
@@ -31,9 +35,11 @@
 
 @keyframes body {
   0% {
-    opacity: 0;
+    opacity: 0.2;
   }
-  50% {
+  
+  100% {
     opacity: 1;
   }
 }
+
