--- a/sass/main.css
+++ b/sass/main.css
@@ -65,8 +65,8 @@ body {
   height: 200px;
   top: 30%;
   left: 20%;
-  -webkit-animation: spin 3000ms linear 0ms;
-          animation: spin 3000ms linear 0ms;
+  -webkit-animation: spin 2000ms linear 0ms;
+          animation: spin 2000ms linear 0ms;
   -webkit-transform: rotate(0);
           transform: rotate(0);
   opacity: 0;
@@ -428,7 +428,7 @@ button:hover {
   width: 100%;
   height: auto;
   text-decoration: none;
-  color: black;
+  cursor: pointer;
 }
 
 .restaurants-orga-card .new {
@@ -510,10 +510,12 @@ button:hover {
 .restaurants-orga-card-texte h2 {
   margin-top: 0;
   margin-bottom: 0px;
+  color: black;
 }
 
 .restaurants-orga-card-texte p {
   margin-top: 0;
+  color: black;
 }
 
 @-webkit-keyframes heart {
@@ -535,6 +537,7 @@ button:hover {
 }
 
 .heart {
+  width: 15%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -545,20 +548,23 @@ button:hover {
       -ms-flex-align: center;
           align-items: center;
   font-size: 35px;
-  padding-right: 20px;
-  position: relative;
 }
 
 .heart-vacuum {
   position: absolute;
 }
 
+.heart-vacuum:hover {
+  opacity: 0;
+}
+
 .heart-filled {
   position: absolute;
-  opacity: 0;
+  color: #FF79DA;
   background-clip: text;
   -webkit-background-clip: text;
-  color: #99E2D0;
+  -webkit-text-fill-color: transparent;
+  opacity: 0;
 }
 
 .heart-filled:hover {
