mise en place du lien de la  page la palette du goût

--- a/sass/layouts/_restaurants.scss
+++ b/sass/layouts/_restaurants.scss
@@ -111,11 +111,12 @@
     &-filled {
         position: absolute;
        
-        color: #FF79DA;
+        color: linear-gradient(#FF79DA, #9356DC);
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         opacity: 0;
+        display: initial;
               
 
         &:hover {
